--- a/src/shared/Modal/modal.css
+++ b/src/shared/Modal/modal.css
@@ -16,7 +16,7 @@
 .modal-content {
   background-color: var(--bg-color);
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  padding: 30px;
   border: 1px solid #888;
   border-radius: var(--br-radius);
   width: 80%;
@@ -36,7 +36,13 @@
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: white;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal-content h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 1.8em;
 }
