--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,19 @@
+@import "./shared/Modal/modal.css";
+@import "./modules/tasks/ui/TaskForm/task_form.css";
+
 :root {
+  --bg-color: #242424;
+  --text-color: rgba(255, 255, 255, 0.87);
+  --br-radius: 12px;
+  --btn-bg: #646cff;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-color);
+  background-color: var(--bg-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,6 +26,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -42,19 +51,6 @@ h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
 .card {
   padding: 2em;
 }
@@ -64,33 +60,32 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
+  color: white;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--btn-bg);
   cursor: pointer;
   transition: border-color 0.25s;
+  border: 1px solid var(--btn-bg);
+  border-radius: var(--br-radius);
 }
 button:hover {
-  border-color: #646cff;
+  border: 1px solid white;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input,
+select,
+textarea {
+  font: inherit;
+  padding: 0.5em;
+  border-radius: var(--br-radius);
+  border: 1px solid #444;
+  background-color: #1e1e1e;
+  color: var(--text-color);
 }
