--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,4 +1,3 @@
-/* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -12,7 +11,10 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
+.modal.show {
+  display: block; /* Show the modal */
+}
+
 .modal-content {
   background-color: var(--bg-color);
   margin: 15% auto; /* 15% from the top and centered */
