--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-@import "./shared/Modal/modal.css";
-@import "./modules/tasks/ui/TaskForm/task_form.css";
-@import "./modules/tasks/ui/NewTask/new_task.css";
-@import "./modules/tasks/ui/TasksList/tasks_list.css";
-
 :root {
   --bg-color: #242424;
   --input-bg-color: #1e1e1e;
@@ -33,20 +28,12 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-#app {
+#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
