--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,11 @@ button:focus-visible {
   outline: none;
 }
 
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 input,
 select,
 textarea {
