--- a/src/shared/components/Loader/loader.css
+++ b/src/shared/components/Loader/loader.css
@@ -3,7 +3,7 @@
   height: 100%;
 }
 
-.loader.show::after {
+.loader.show.overlay::after {
   content: "";
   position: absolute;
   top: 0;
@@ -17,10 +17,14 @@
 }
 
 .spinner {
+  width: 80px;
+  height: 80px;
+  padding: 0 6px;
+}
+
+.spinner.overlay {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80px;
-  height: 80px;
 }
